--- a/configuration.properties
+++ b/configuration.properties
@@ -1,8 +1,11 @@
 browser=chrome
-url=https://qa1.vytrack.com
+url=https://qa2.vytrack.com
 driver_username=user1
 driver_password=UserUser123
 sales_manager_username=salesmanager101
 sales_manager_password=UserUser123
 store_manager_username=storemanager85
 store_manager_password=UserUser123
+qa1_db_url=jdbc:mysql://52.23.232.254:3306/bitnami_orocrm
+qa1_db_username=qa_user
+qa1_db_password=qa_user
